--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,13 @@
 body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background: #f5f5f5;
-    margin: 20px
+    margin-left: 50px;
+    line-height: 1.5;
+}
+
+h1 {
+    font-size: 2em;
+    margin: 0.67em 0;
 }
 
 
@@ -23,4 +29,8 @@ ul {
 
 .contact {
     margin: 10px
+}
+
+p {
+    font-style: italic;
 }
